tdf#133889 Upcasting the type of actual parameter.

Type of actual parameter is made same as formal parameter.This is done to undo the conversions made in sbxToUnoValueImpl.

Change-Id: I8c7a880503d927eb43ad38eac4bf01451442834b