sc/qa/extras/macros-test.cxx
@@ -53,6 +53,7 @@ public:
     void testTdf71271();
     void testTdf43003();
     void testTdf133887();
+    void testTdf133889();
 
     CPPUNIT_TEST_SUITE(ScMacrosTest);
     CPPUNIT_TEST(testStarBasic);
@@ -72,6 +73,7 @@ public:
     CPPUNIT_TEST(testTdf71271);
     CPPUNIT_TEST(testTdf43003);
     CPPUNIT_TEST(testTdf133887);
+    CPPUNIT_TEST(testTdf133889);
 
     CPPUNIT_TEST_SUITE_END();
 };
@@ -892,6 +894,37 @@ void ScMacrosTest::testTdf133887()
     // - Actual  : 7
 
     CPPUNIT_ASSERT_EQUAL(6.75, aReturnValue);
+
+    css::uno::Reference<css::util::XCloseable> xCloseable(xComponent, css::uno::UNO_QUERY_THROW);
+    xCloseable->close(true);
+}
+
+void ScMacrosTest::testTdf133889()
+{
+    OUString aFileName;
+    createFileURL(u"tdf133889.ods", aFileName);
+    auto xComponent = loadFromDesktop(aFileName, "com.sun.star.sheet.SpreadsheetDocument");
+
+    CPPUNIT_ASSERT_MESSAGE("Failed to load the doc", xComponent.is());
+
+    css::uno::Any aRet;
+    css::uno::Sequence<sal_Int16> aOutParamIndex;
+    css::uno::Sequence<css::uno::Any> aOutParam;
+    css::uno::Sequence<css::uno::Any> aParams{ css::uno::Any(sal_Int32(0)) };
+
+    SfxObjectShell::CallXScript(
+        xComponent,
+        "vnd.sun.Star.script:Standard.Module1.TestInvoke?language=Basic&location=document", aParams,
+        aRet, aOutParamIndex, aOutParam);
+
+    sal_Int32 aReturnValue;
+    aOutParam[0] >>= aReturnValue;
+
+    // Without the fix in place, this test would have failed with
+    // - Expected: 100000
+    // - Actual  : 0
+
+    CPPUNIT_ASSERT_EQUAL(sal_Int32(100000), aReturnValue);
 
     css::uno::Reference<css::util::XCloseable> xCloseable(xComponent, css::uno::UNO_QUERY_THROW);
     xCloseable->close(true);
